# magic-eye-games

./: CNAME  Cargo.toml  Trunk.toml  index.html  magic-eye-games-60ff0fad27dc58ff.js
.github/workflows/: deploy.yml
src/: main.rs  menu.rs  plugin.rs  settings.rs  stereogram.rs
src/games/: mod.rs  pong.rs  tetris.rs
